--- a/main.tex
+++ b/main.tex
@@ -20,8 +20,8 @@
 
 % Algorithm packages
 \usepackage{algorithm} % Algorithm environment
-\usepackage{algorithmicx} % Improved algorithm options
-\usepackage[noend]{algpseudocode}
+\usepackage{algorithmicx} % Improvements to Algorithm environment
+\usepackage[noend]{algpseudocode} % No "end" statement at the end of an algorithm
 
 % Other miscellaneous packages
 \usepackage{array} % For fixed-length tables
@@ -61,16 +61,18 @@
 
 \begin{document}
 
-\pagenumbering{roman}
-
 \input{Title_Page.tex}
+
+\pagenumbering{roman}
 \input{Abstract.tex}
-\input{Acknowledgements.tex}
+\input{Acknowledgments.tex}
 \tableofcontents
 %\listoftables % DELETE IF UNUSED
 \listoffigures
 \input{Acronyms.tex}
+\pagebreak
 
+\pagenumbering{arabic}
 \input{Introduction.tex}
 \input{Prior_Work.tex}
 \todo{add Direct IMU integration section}
