added photos to Exp Design

--- a/Introduction.tex
+++ b/Introduction.tex
@@ -17,7 +17,7 @@ After two years of involvement with the CARD team, I applied for an internship a
 \begin{wrapfigure}{l}{0.5\textwidth}
   \centering
     \includegraphics[width=0.5\textwidth]{april_tag}
-  \caption[Example April tag]{An example of an April tag.}
+  \caption[Example April Tag]{An example of an April tag.}
   \label{fig:april_tag}
 \end{wrapfigure}
 
